calico/managedworker/agent-workload-globalnetworkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: agent-workload
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      selector: k8s-app == 'kube-dns'
      namespaceSelector: projectcalico.org/name == 'kube-system'
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 53
      selector: k8s-app == 'kube-dns'
      namespaceSelector: projectcalico.org/name == 'kube-system'
    protocol: TCP  
  - action: Deny
    destination:
      selector: all()
  - action: Deny
    destination:
      nets:
      - 172.20.0.1/32
  - action: Allow
    destination:
      nets:
      - 0.0.0.0/0
  selector: app.kubernetes.io/managed-by == 'tekton-pipelines'
  types:
  - Egress
