calico/managedworker/tekton-controller-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: tekton-controller
  namespace: tekton-pipelines
spec:
  egress:
  - action: Allow
    destination:
      nets:
      - 172.20.0.1/32
  order: 1000
  selector: app == 'tekton-pipelines-controller'
  types:
  - Egress
